# kan-mine

./: .cnb.yml  .gitattributes  .gitignore  3080TI_PORTABLE_TUNING_REPORT.md  A2_EXECUTION_PLAN.md  BRANCHES.md  CHANGELOG.md  DEPLOY_4090.md  DESIGN_persistent.md  DESIGN_speedup.md  DESIGN_vs_official.md  GPU_PROFILES.md  LICENSE  MAINTENANCE_OPTIMIZATION_PLAN.md  NEXT_SPEEDUP_PLAN.md  OPTIMIZATION_PLAN.md  PRODUCTION_GPU_SUPPORT_PLAN.md  PRODUCTION_GPU_TEST_PLAN.md  PROGRESS.md  README.en.md  README.md  ROADMAP.md  ROADMAP_106TH.md  RUNBOOK.md  STATUS_v2.md  STRUCTURE.md  SUMMARY_v2.md  TUNING_PHASE7.md  bench_groupm.sh  build.sh  build_windows.ps1  check_release_profiles.sh  ci_gpu_verify.sh  cpu_test.sh  gpu_persist_ab.sh  install_kan.sh  install_service.sh  kan.logrotate  kan.service  m1c_pool_hunt.py  (+9 more)
.cnb/: web_trigger.yml
.github/workflows/: linux.yml  windows.yml
archive/: imma_brute.cu  imma_interleave.cu  imma_map.cu  imma_simple.cu  imma_verify.cu  imma_verify2.cu  imma_verify3.cu  tc_imma.cu
bench/: ablate_a2.sh  ablate_fold_a1.sh  bench_5090.sh  cutlass_int8_bench.cu  fold_power_clock.sh  gemm_roofline_sustained.sh  groupm_sweep.cu  headroom_probe.sh  mma_ldmatrix_test.cu  mma_microtest.cu  mma_warpgemm_test.cu  parse_tc_sweep.py  quick_test.sh  sweep_4090.sh  sweep_sm86_groupm.sh  test_persistent.sh  test_smalltile.sh  verify_persist_default.sh
bench/results/: 2026-06-22_rtx3080ti_sm86_vps.csv  2026-06-22_rtx3080ti_sm86_vps.md  2026-06-22_rtx5090_sm120_vps.csv  2026-06-22_rtx5090_sm120_vps.md  2026-06-23_rtx5090_sm120_vps106.csv  2026-06-23_rtx5090_sm120_vps106.md
experiments/: test_gpu_rng.cu  verify_swizzle.py
notes/: README.md
notes/week1/: PLAN_cutlass.md  day1_mainloop_analysis.md  day1_sm80_architecture.md  (+4 more)
oracle/: README.md  header.hex  meta.txt  mining_config.hex
pearl-blake3/: Cargo.toml
pearl-blake3/src/: hasher.rs  lib.rs  merkle.rs  merkle_py.rs
plonky2/: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  rustfmt.toml
plonky2/starky/: Cargo.toml
plonky2/starky/src/: config.rs  fibonacci_stark.rs  get_challenges.rs  lib.rs  lookup.rs  permutation_stark.rs  proof.rs  prover.rs  recursive_verifier.rs  stark.rs  unconstrained_stark.rs  util.rs  verifier.rs
plonky2/starky/src/pair_stark/: pair_air.rs  pair_air_ext.rs  pair_trace.rs  test_pair.rs
src/: gpu_draw.cu  gpu_draw.h  gpu_prep.cu  jackpot_kernel.cu  miner_main.cpp  plainproof_gen.cpp  platform.h  prover.h  tc_block.cu  tc_cutlass_persistent.cu  tc_cutlass_small.cu  tc_cutlass_v1.cu  tc_cutlass_v2.cu  tc_deep_pipeline.cu  tc_gemm.cu  tc_imma2.cu  tc_stub.cpp
zk-pow/: .gitignore  Cargo.toml  README.md  rustfmt.toml
zk-pow/bindings/go/: Cargo.toml  build.rs  cbindgen.toml
zk-pow/bindings/go/.cargo/: config.toml
zk-pow/bindings/go/src/: common.rs  lib.rs  mine.rs  verify.rs
zk-pow/src/: lib.rs
zk-pow/src/api/: mod.rs  proof.rs  proof_utils.rs  prove.rs  sanity_checks.rs  verify.rs
zk-pow/src/circuit/: blake_program.rs  circuit_utils.rs  compat_test.rs  embedded_cache.rs  mod.rs  pearl_air.rs  pearl_circuit.rs  pearl_layout.rs  pearl_noise.rs  pearl_preprocess.rs  pearl_program.rs  pearl_stark.rs  pearl_trace.rs
zk-pow/src/circuit/chip/: blake3.rs  control_and_matid_packed.rs  i8u8.rs  input.rs  jackpot.rs  matmul.rs  mod.rs  monotonic_increment.rs  range_table.rs
zk-pow/src/circuit/chip/blake3/: blake3_air.rs  blake3_compress.rs  blake3_layout.rs  constraints.rs  logic.rs  program.rs  trace.rs
zk-pow/src/circuit/chip/input/: constraints.rs  trace.rs
zk-pow/src/circuit/chip/jackpot/: constraints.rs  helper.rs  logic.rs  trace.rs
zk-pow/src/circuit/chip/matmul/: constraints.rs  logic.rs  trace.rs
zk-pow/src/circuit/layout_macro/: Cargo.toml
zk-pow/src/circuit/layout_macro/src/: lib.rs
zk-pow/src/circuit/utils/: air_utils.rs  evaluator.rs  macros.rs  mod.rs  native_evaluator.rs  symbolic_evaluator.rs  trace_utils.rs
zk-pow/src/ffi/: mine.rs  mod.rs  plain_proof.rs  pybind.rs
zk-pow/tests/: cache_test.rs
(+60 files in other folders)
