[package]
name = "zk-pow"
version = "0.1.0"
edition = "2024"

[lib]
name = "zk_pow"
crate-type = ["rlib"]

[features]
embedded_cache = [] # embedded verifier cache
pyo3 = ["dep:pyo3", "pearl-blake3/pyo3"] # Python bindings support

[dependencies]
serde_json = "1.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
hex = "0.4"
primitive-types = { version = "0.12.1", features = ["serde"] }
plonky2 = { path = "../plonky2/plonky2" }
plonky2_field = { path = "../plonky2/field" }
plonky2_maybe_rayon = { path = "../plonky2/maybe_rayon" }
starky = { path = "../plonky2/starky" }
env_logger = "0.10.0"
thiserror = "1.0"
log = "0.4.27"
anyhow = "1.0.98"
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash", "serde"] }
layout-macro = { path = "src/circuit/layout_macro" }
rand = "0.9.2"
serde_with = "3.14.0"
lazy_static = "1.4"
sorted-vec = "0.8.10"
itertools = "0.14.0"
blake3 = "1.8"
pearl-blake3 = { path = "../pearl-blake3", features = ["serde"] }
pyo3 = { version = "0.24", optional = true }

[dev-dependencies]
rand_chacha = "0.9"

[profile.devr]
inherits = "release"
debug-assertions = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }
