[package]
name = "zk-pow-go"
version = "0.1.0"
edition = "2021"
description = "Go FFI bindings for ZK-POW"

[lib]
name = "zk_pow_ffi"
crate-type = ["staticlib"]

[dependencies]
blake3 = "1.5"
zk-pow = { path = "../..", default-features = false, features = ["embedded_cache"] }
lazy_static = "1.5"
anyhow = "1.0"
itertools = "0.14"
log = "0.4"
rand = "0.8"
primitive-types = "0.12"
env_logger = "0.10.0"

[build-dependencies]
cbindgen = "0.26"

[profile.devr]
inherits = "release"
debug-assertions = true

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }
